@@ -5,6 +5,7 @@
    PAM_NEW_AUTHTOK_REQD remains in #if 0 for now.
  - (stevesk) [auth-pam.c] cast to avoid initialization type mismatch
    warning on pam_conv struct conversation function.
+ - (stevesk) [auth-pam.h] license
 
 20020720
  - (stevesk) [ssh-keygen.c] bug #231: always init/seed_rng().
@@ -1405,4 +1406,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2383 2002/07/21 22:49:47 stevesk Exp $
+$Id: ChangeLog,v 1.2384 2002/07/21 23:16:00 stevesk Exp $
